--- a/semana2/Dia 2/06-texto.html
+++ b/semana2/Dia 2/06-texto.html
@@ -6,13 +6,14 @@
     <title>Texto</title>
     <link rel="stylesheet" href="06-texto.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Itim&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
     <header>
       <h1 class="titulo">Propiedades de texto</h1>
+      <h2>Con fuente local</h2>
     </header>
 
     <main>
@@ -24,6 +25,28 @@
           velit accusantium. Optio unde nemo odio sint perspiciatis et ea, eaque
           eum repellendus.
         </p>
+        <p class="parrafo2">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos
+          culpa reiciendis alias illo recusandae libero repellat sequi magni
+          molestias minus rerum expedita eligendi, labore quia explicabo unde
+          velit accusantium. Optio unde nemo odio sint perspiciatis et ea, eaque
+          eum repellendus.
+        </p>
+        <p class="parrafo3">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima iusto
+          nulla ullam fugit error amet labore reiciendis temporibus, velit
+          facere maxime consequuntur modi dolorum dolor blanditiis rerum vel est
+          aperiam laborum? Repellat perferendis iusto et omnis quaerat.
+          Reprehenderit veniam quo quas, autem tempora enim sint iure voluptatem
+          quidem sunt maiores! Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit. Fugiat exercitationem numquam est asperiores eos
+          aspernatur nesciunt officia nisi similique eligendi? Cumque quae fugit
+          modi repellat id voluptas ratione maxime soluta qui quod, alias,
+          aspernatur unde repellendus cupiditate ducimus voluptatem magni
+          nostrum voluptatibus accusantium. Vel vero totam aspernatur libero.
+          Sequi, reprehenderit.
+        </p>
+        <a href="https://www.twitter.com" target="_blank"> Llévame a twitter</a>
       </section>
     </main>
   </body>
