--- a/semana2/Dia 5/06-card2.html
+++ b/semana2/Dia 5/06-card2.html
@@ -367,7 +367,7 @@
       </div>
 
       <div class="card">
-        <div class="card__imagen">
+        <div class="card__imagen"
           <img src="http://lorempixel.com/400/400/cats" alt="imgcard" />
           <p class="card__photos">Fotos</p>
           <p class="card__fecha">
