--- a/semana3/dia3/02-mediaquery.html
+++ b/semana3/dia3/02-mediaquery.html
@@ -81,6 +81,61 @@
             </p>
           </div>
         </div>
+        <div class="columna">
+          <div class="card">
+            <h4 class="card__title"></h4>
+            <p class="card__text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Consequuntur tempore eligendi ratione aperiam facilis minus
+              recusandae unde, aspernatur nemo quidem consectetur? Officia qui
+              tenetur nisi commodi culpa eveniet aliquam cum.
+            </p>
+          </div>
+        </div>
+        <div class="columna">
+          <div class="card">
+            <h4 class="card__title"></h4>
+            <p class="card__text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Consequuntur tempore eligendi ratione aperiam facilis minus
+              recusandae unde, aspernatur nemo quidem consectetur? Officia qui
+              tenetur nisi commodi culpa eveniet aliquam cum.
+            </p>
+          </div>
+        </div>
+        <div class="columna">
+          <div class="card">
+            <h4 class="card__title"></h4>
+            <p class="card__text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Consequuntur tempore eligendi ratione aperiam facilis minus
+              recusandae unde, aspernatur nemo quidem consectetur? Officia qui
+              tenetur nisi commodi culpa eveniet aliquam cum.
+            </p>
+          </div>
+        </div>
+        <div class="columna">
+          <div class="card">
+            <h4 class="card__title"></h4>
+            <p class="card__text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Consequuntur tempore eligendi ratione aperiam facilis minus
+              recusandae unde, aspernatur nemo quidem consectetur? Officia qui
+              tenetur nisi commodi culpa eveniet aliquam cum.
+            </p>
+          </div>
+        </div>
+        <div class="columna">
+          <div class="card">
+            <h4 class="card__title"></h4>
+            <p class="card__text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Consequuntur tempore eligendi ratione aperiam facilis minus
+              recusandae unde, aspernatur nemo quidem consectetur? Officia qui
+              tenetur nisi commodi culpa eveniet aliquam cum.
+            </p>
+          </div>
+        </div>
       </div>
     </main>
   </body>
