--- a/semana3/challenges/reto3 - responsive landing page/index.html
+++ b/semana3/challenges/reto3 - responsive landing page/index.html
@@ -17,176 +17,201 @@
   </head>
 
   <body>
-    <div class="general__wrapper">
-      <header>
-        <div class="header__logo">
-          <img src="./images/logo.svg" alt="logo" />
-        </div>
-
-        <nav class="header__nav">
-          <ul>
-            <li class="header__nav_item">Pricing</li>
-            <li class="header__nav_item">Product</li>
-            <li class="header__nav_item">About us</li>
-            <li class="header__nav_item">Careers</li>
-            <li class="header__nav_item">Community</li>
-          </ul>
-        </nav>
-        <button class="btn_getstarted1">Get Started</button>
-      </header>
-      <div class="wrapper">
-        <div class="wrapper__wrapper1">
-          <div class="wrapper__wrapper1_1">
-            <h1 class="wrapper1__h1">
-              Bring everyone together to build better products.
-            </h1>
-            <p class="wrapper1__p1">
+    <div class="background2"></div>
+    <header class="header" id="header">
+      <figure class="header__logo">
+        <img src="./images/logo.svg" alt="" />
+      </figure>
+      <nav class="header__nav">
+        <ul class="header__list">
+          <li class="header__item">
+            <a href="#" class="header__link">Pricing</a>
+          </li>
+          <li class="header__item">
+            <a href="#" class="header__link">Product</a>
+          </li>
+          <li class="header__item">
+            <a href="#" class="header__link">About us</a>
+          </li>
+          <li class="header__item">
+            <a href="#" class="header__link">Careers</a>
+          </li>
+          <li class="header__item">
+            <a href="#" class="header__link">Community</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header__button">
+        <a class="btn" href="#">Get Started</a>
+      </div>
+      <figure class="header__menu">
+        <img src="./images/icon-hamburger.svg" id="menu" />
+      </figure>
+    </header>
+    <main class="main">
+      <div class="fila">
+        <div class="columna">
+          <div class="columna1_text">
+            <h1>Bring everyone together to build better products.</h1>
+            <p>
               Manage makes it simple for software teams to plan day-to-day tasks
               while keeping the larger team goals in view.
             </p>
-            <button class="btn_getstarted1">Get Started</button>
-          </div>
-          <div class="wrapper__wrapper1_2">
-            <img src="./images/illustration-intro.svg" alt="graphics" />
+            <a class="btn" href="#">Get Started</a>
           </div>
         </div>
-
-        <div class="wrapper__wrapper2">
-          <div class="wrapper__wrapper2_1">
-            <h2 class="wrapper2__h2">What’s different about Manage?</h2>
-            <p class="wrapper2__p2">
+        <div class="columna">
+          <figure class="main__banner">
+            <img src="./images/illustration-intro.svg" alt="" />
+          </figure>
+        </div>
+        <div class="columna">
+          <div class="columna3_text">
+            <h2>What’s different about Manage?</h2>
+            <p>
               Manage provides all the functionality your team needs, without the
               complexity. Our software is tailor-made for modern digital product
               teams.
             </p>
           </div>
-          <div class="wrapper__wrapper2_2">
-            <div class="list__general">
-              <div class="list__number">
-                <p class="list_items">01</p>
-              </div>
-              <div class="list_content">
-                <h3>Track company-wide progress</h3>
-                <p>
-                  See how your day-to-day tasks fit into the wider vision. Go
-                  from tracking progress at the milestone level all the way done
-                  to the smallest of details. Never ose sigth of the bigger
-                  picture again.
-                </p>
-              </div>
-            </div>
-
-            <div class="list__general">
-              <div class="list__number">
-                <p class="list_items">02</p>
-              </div>
-              <div class="list_content">
-                <h3>Advanced built-in reports</h3>
-                <p>
-                  Set internal delivery estimates and track progress toward
-                  company goals. Our customisable dashboard helps you build out
-                  the reports you need to keep key stakeholders informed.
-                </p>
-              </div>
-            </div>
-            <div class="list__general">
-              <div class="list__number">
-                <p class="list_items">03</p>
-              </div>
-              <div class="list_content">
-                <h3>Everything you need in one place</h3>
-                <p>
-                  Stop jumping from one service to another to communicate, store
-                  files, track tasks and share documents. Manage offers an
-                  all-in-one team productivity solution.
-                </p>
-              </div>
-            </div>
+        </div>
+        <div class="columna">
+          <div class="media">
+            <p class="media__number">01</p>
+            <h4 class="media__title">Track company-wide progress</h4>
+            <p class="media__text">
+              See how your day-to-day tasks fit into the wider vision. Go from
+              tracking progress at the milestone level all the way done to the
+              smallest of details. Never lose sight of the bigger picture again.
+            </p>
+          </div>
+          <div class="media">
+            <p class="media__number">02</p>
+            <h4 class="media__title">Track company-wide progress</h4>
+            <p class="media__text">
+              Advanced built-in reports Set internal delivery estimates and
+              track progress toward company goals. Our customisable dashboard
+              helps you build out the reports you need to keep key stakeholders
+              informed.
+            </p>
+          </div>
+          <div class="media">
+            <p class="media__number">03</p>
+            <h4 class="media__title">Everything you need in one place</h4>
+            <p class="media__text">
+              Everything you need in one place Stop jumping from one service to
+              another to communicate, store files, track tasks and share
+              documents. Manage offers an all-in-one team productivity solution.
+            </p>
           </div>
         </div>
-        <div class="wrapper__wrapper3">
-          <div class="wrapper__wrapper3_1">
-            <h3>What they’ve said</h3>
-          </div>
-          <div class="wrapper__wrapper3_2">
-            <div class="card">
-              <div class="card__foto1"></div>
-              <div class="card__info">
-                <p class="card_nombre">Anisha Li</p>
-                <p class="card_comment">
-                  “Manage has supercharged our team’s workflow. The ability to
-                  maintain visibility on larger milestones at all times keeps
-                  everyone motivated.”
-                </p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card__foto2"></div>
-              <div class="card__info">
-                <p class="card_nombre">Ali Bravo</p>
-                <p class="card_comment">
-                  “We have been able to cancel so many other subscriptions since
-                  using Manage. There is no more cross-channel confusion and
-                  everyone is much more focused.”
-                </p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card__foto3"></div>
-              <div class="card__info">
-                <p class="card_nombre">Richard Watts</p>
-                <p class="card_comment">
-                  “Manage allows us to provide structure and process. It keeps
-                  us organized and focused. I can’t stop recommending them to
-                  everyone I talk to!”
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="wrapper__wrapper3_3">
-            <button class="btn_getstarted1">Get Started</button>
-          </div>
-        </div>
-        <div class="wrapper__wrapper4">
-          <p>Simplify how your team works today.</p>
-          <button class="btn_getstarted2">Get Started</button>
-        </div>
-
-        <footer class="wrapper__footer">
-          <div class="footer__div1">
-            <div class="footer__logo">
-              <img src="./images/logo2.svg" alt="logo2" />
-            </div>
-            <div class="footer__redes">
-              <img src="./images/icon-facebook.svg" alt="facebook" />
-              <img src="./images/icon-youtube.svg" alt="youtube" />
-              <img src="./images/icon-twitter.svg" alt="twitter" />
-              <img src="./images/icon-pinterest.svg" alt="pinterest" />
-              <img src="./images/icon-instagram.svg" alt="instagram" />
-            </div>
-          </div>
-          <nav class="footer__nav">
-            <ul class="footer__ul">
-              <li>Home</li>
-              <li>Pricing</li>
-              <li>Products</li>
-              <li>About Us</li>
-              <li>Careers</li>
-              <li>Community</li>
-              <li>Privacy Policy</li>
-            </ul>
-          </nav>
-          <div class="footer__div2">
-            <div class="footer__div2_1">
-              <input type="email" placeholder="Updates in your inbox..." />
-              <button class="btn_go">Go</button>
-            </div>
-            <div class="footer__div2_2">
-              <p>Copyright 2020. All Rights Reserved</p>
-            </div>
-          </div>
-        </footer>
       </div>
-    </div>
+    </main>
+    <section class="comments">
+      <h2 class="comments__title">What they’ve said</h2>
+      <div class="comments__container">
+        <!-- COMENTARIO COMPONENTE -->
+        <div class="comment">
+          <div class="comment__box">
+            <figure class="comment__img">
+              <img src="./images/avatar-anisha.png" alt="" />
+            </figure>
+            <h4 class="comment__name">Anisha Li</h4>
+            <p class="comment__text">
+              “Manage has supercharged our team’s workflow. The ability to
+              maintain visibility on larger milestones at all times keeps
+              everyone motivated.”
+            </p>
+          </div>
+        </div>
+        <!-- COMENTARIO COMPONENTE FIN -->
+        <!-- COMENTARIO COMPONENTE -->
+        <div class="comment">
+          <div class="comment__box">
+            <figure class="comment__img">
+              <img src="./images/avatar-ali.png" alt="" />
+            </figure>
+            <h4 class="comment__name">Ali Bravo</h4>
+            <p class="comment__text">
+              “We have been able to cancel so many other subscriptions since
+              using Manage. There is no more cross-channel confusion and
+              everyone is much more focused.”
+            </p>
+          </div>
+        </div>
+        <!-- COMENTARIO COMPONENTE FIN -->
+        <!-- COMENTARIO COMPONENTE -->
+        <div class="comment">
+          <div class="comment__box">
+            <figure class="comment__img">
+              <img src="./images/avatar-richard.png" alt="" />
+            </figure>
+            <h4 class="comment__name">Richard Watts</h4>
+            <p class="comment__text">
+              “Manage allows us to provide structure and process. It keeps us
+              organized and focused. I can’t stop recommending them to everyone
+              I talk to!”
+            </p>
+          </div>
+        </div>
+        <!-- COMENTARIO COMPONENTE FIN -->
+      </div>
+      <div class="comments__button">
+        <a class="btn" href="#">Get Started</a>
+      </div>
+    </section>
+    <footer class="footer">
+      <section class="footer__title">
+        <div class="wrapper title">
+          <h3>Simplify how your team works today.</h3>
+          <a href="#" class="btn">Get Started</a>
+        </div>
+      </section>
+      <section class="footer__info">
+        <div class="wrapper info">
+          <div class="footer__logo">
+            <figure class="footer__image">
+              <img src="./images/logo2.svg" alt="" />
+            </figure>
+            <div class="footer__social">
+              <img src="images/icon-facebook.svg" alt="" />
+              <img src="images/icon-youtube.svg" alt="" />
+              <img src="images/icon-pinterest.svg" alt="" />
+              <img src="images/icon-twitter.svg" alt="" />
+              <img src="images/icon-instagram.svg" alt="" />
+            </div>
+          </div>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="" class="footer__link">Home</a>
+            </li>
+            <li class="footer__item">
+              <a href="" class="footer__link">Pricing</a>
+            </li>
+            <li class="footer__item">
+              <a href="" class="footer__link">Products</a>
+            </li>
+            <li class="footer__item">
+              <a href="" class="footer__link">About Us</a>
+            </li>
+            <li class="footer__item">
+              <a href="" class="footer__link">Careers</a>
+            </li>
+            <li class="footer__item">
+              <a href="" class="footer__link">Community</a>
+            </li>
+            <li class="footer__item">
+              <a href="" class="footer__link">Privacy Policy</a>
+            </li>
+          </ul>
+          <form action="" class="footer__form">
+            <input type="email" placeholder="Updates in your inbox..." />
+            <button type="submit">Go</button>
+            <span>Copyright 2020. All Rights Reserved</span>
+          </form>
+        </div>
+      </section>
+    </footer>
+    <script src="./index.js"></script>
   </body>
 </html>
