--- a/semana4/dia3/reto4 - responsive landing page/index.html
+++ b/semana4/dia3/reto4 - responsive landing page/index.html
@@ -104,47 +104,53 @@
       <a href="#" class="btn1">Get Started</a>
     </div>
     <footer class="footer">
-      <figure class="logo">
-        <img src="./images/logo.svg" alt="" />
-      </figure>
-      <div class="footer__nav">
-        <div class="footer__group_list">
-          <p>Features</p>
-          <ul class="footer__list">
-            <li class="footer__link">
-              <a href="#" class="link">Link Shortening</a>
-            </li>
-            <li class="footer__link">
-              <a href="#" class="link"></a>Branded Links
-            </li>
-            <li class="footer__link"><a href="#" class="link"></a>Analytics</li>
-          </ul>
+      <div class="footer__wrapper">
+        <figure class="logo">
+          <img src="./images/logo2.svg" alt="" />
+        </figure>
+        <div class="footer__nav">
+          <div class="footer__group_list">
+            <p>Features</p>
+            <ul class="footer__list">
+              <li class="footer__link">
+                <a href="#" class="link">Link Shortening</a>
+              </li>
+              <li class="footer__link">
+                <a href="#" class="link">Branded Links</a>
+              </li>
+              <li class="footer__link">
+                <a href="#" class="link">Analytics</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__group_list">
+            <p>Resources</p>
+            <ul class="footer__list">
+              <li class="footer__link"><a href="#" class="link">Blog</a></li>
+              <li class="footer__link">
+                <a href="#" class="link">Developers</a>
+              </li>
+              <li class="footer__link"><a href="#" class="link">Support</a></li>
+            </ul>
+          </div>
+          <div class="footer__group_list">
+            <p>Company</p>
+            <ul class="footer__list">
+              <li class="footer__link"><a href="#" class="link">About</a></li>
+              <li class="footer__link">
+                <a href="#" class="link">Our Team</a>
+              </li>
+              <li class="footer__link"><a href="#" class="link">Careers</a></li>
+              <li class="footer__link"><a href="#" class="link">Contact</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="footer__group_list">
-          <p>Resources</p>
-          <ul class="footer__list">
-            <li class="footer__link"><a href="#" class="link">Blog</a></li>
-            <li class="footer__link">
-              <a href="#" class="link">Developers</a>
-            </li>
-            <li class="footer__link"><a href="#" class="link">Support</a></li>
-          </ul>
+        <div class="footer__redes">
+          <img src="./images/icon-facebook.svg" alt="" />
+          <img src="./images/icon-twitter.svg" alt="" />
+          <img src="./images/icon-pinterest.svg" alt="" />
+          <img src="./images/icon-instagram.svg" alt="" />
         </div>
-        <div class="footer__group_list">
-          <p>Company</p>
-          <ul class="footer__list">
-            <li class="footer__link"><a href="#" class="link">About</a></li>
-            <li class="footer__link"><a href="#" class="link">Our Team</a></li>
-            <li class="footer__link"><a href="#" class="link">Careers</a></li>
-            <li class="footer__link"><a href="#" class="link">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="footer__redes">
-        <img src="./images/icon-facebook.svg" alt="" />
-        <img src="./images/icon-twitter.svg" alt="" />
-        <img src="./images/icon-pinterest.svg" alt="" />
-        <img src="./images/icon-instagram.svg" alt="" />
       </div>
     </footer>
   </body>
