--- a/semana5/dia3/05-document.html
+++ b/semana5/dia3/05-document.html
@@ -10,11 +10,16 @@
       <h1 id="titulo">Titulo de mi app</h1>
     </header>
     <ul>
-      <li class="lista__item"></li>
-      <li class="lista__item"></li>
-      <li class="lista__item"></li>
-      <li class="lista__item"></li>
+      <li class="lista__item">Item 1</li>
+      <li class="lista__item">Item 2</li>
+      <li class="lista__item">Item 3</li>
+      <li class="lista__item">Item 4</li>
     </ul>
+    <h2 id="subtitulo">Subtitulo de la aplicacion</h2>
+    <div class="cajita"></div>
+    <div class="cajita"></div>
+    <div class="cajita"></div>
+
     <script src="./05-document.js"></script>
   </body>
 </html>
