--- a/semana6/dia1/02-eventos-forms2.html
+++ b/semana6/dia1/02-eventos-forms2.html
@@ -62,13 +62,13 @@
         <p>
           <label for="">Tipo</label>
           <select name="" id="selectTipo">
-            <option value="0">--Seleccione tipo</option>
+            <option value="0" disabled selected>--Seleccione tipo</option>
           </select>
         </p>
         <p>
           <label for="">Categoria</label>
           <select name="" id="selectCategoria">
-            <option value="0">--Seleccione categoria</option>
+            <option value="0" disabled selected>--Seleccione categoria</option>
           </select>
         </p>
       </fieldset>
@@ -87,8 +87,8 @@
           </tr>
         </thead>
         <tbody id="tbody">
-          <tr id="rowInicial">
-            <td colspan="5">NO SE REGISTRARON PLATOS</td>
+          <tr id="row0">
+            <td id="row0_1" colspan="5">NO SE REGISTRARON PLATOS</td>
           </tr>
         </tbody>
       </table>
